--- a/pom.xml
+++ b/pom.xml
@@ -14,4 +14,12 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
+
 </project>
