一天一个设计模式 单例模式

--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,21 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+
+            <!-- 项目属性 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
