--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>RELEASE</version>
+            <version>4.1.19</version>
         </dependency>
     </dependencies>
 
