--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>hutool-all</artifactId>
             <version>4.1.19</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.6.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
