--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,13 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.6.Final</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.7</version>
+        </dependency>
     </dependencies>
 
     <build>
