--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>4.1.6.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+
 
         <dependency>
             <groupId>cglib</groupId>
