--- a/src/main/java/Z_0050_SpringCloud入门/S3_服务消费者Feign-lite/F1_服务注册中心_lite/pom.xml
+++ b/src/main/java/Z_0050_SpringCloud入门/S3_服务消费者Feign-lite/F1_服务注册中心_lite/pom.xml
@@ -4,22 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.2.RELEASE</version>
-        <relativePath /> <!-- lookup parent from repository -->
+        <groupId>Z_0050_SpringCloud</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0</version>
     </parent>
 
-    <groupId>com.zyf.cloud</groupId>
-    <artifactId>F1_lite</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>S3_服务消费者Feign-F1_服务注册中心_lite</name>
-    <description>springCloud 服务消费者Feign_lite</description>
+    <groupId>F1_ServerServiceFeign-lite</groupId>
+    <artifactId>F1_ServerRegisterCenterLite</artifactId>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
-    </properties>
+    <name>S3_服务消费者Feign-F1_服务注册中心_lite</name>
 
     <dependencies>
         <dependency>
@@ -33,34 +26,5 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
-    <repositories>
-        <repository>
-            <id>spring-milestones</id>
-            <name>Spring Milestones</name>
-            <url>https://repo.spring.io/milestone</url>
-        </repository>
-    </repositories>
 
 </project>
