--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <artifactId>java-knowledge</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <name>曾玉飞的JAVA个人知识库</name>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
