--- a/Z_0020_RabbitMQ入门/pom.xml
+++ b/Z_0020_RabbitMQ入门/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
