--- a/Z_0031_SpringBoot各种案例/G0003_flyway自动建表初始化数据/src/main/resources/application.yml
+++ b/Z_0031_SpringBoot各种案例/G0003_flyway自动建表初始化数据/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   # H2 配置
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test;MODE=MYSQL;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER=TRUE;IGNORECASE=TRUE;NON_KEYWORDS=user
+    url:       jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;IGNORECASE=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE;NON_KEYWORDS=user;DB_CLOSE_DELAY=-1
 
   h2:
     console:
