增加 Z_0031_SpringBoot各种案例/G0004_多租户缓存key自动拼接

--- a/Z_0031_SpringBoot各种案例/G0004_多租户缓存key自动拼接/src/main/resources/application.yml
+++ b/Z_0031_SpringBoot各种案例/G0004_多租户缓存key自动拼接/src/main/resources/application.yml
@@ -5,6 +5,7 @@ tenant:
   enable: true
   white-urls:
     - /common/*
+    - /commonNot/*
   white-key-prefixs:
     - zyf-auth
   column: TENANT_ID
